amcaudiodec: Set "is-adts" to 1 for ADTS AAC

Otherwise it fails to decode.

https://bugzilla.gnome.org/show_bug.cgi?id=740101